'position: fixed' on mobile issue resolved & other

--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -4,11 +4,9 @@ height:400px;
 position:relative;
 overflow:hidden;
 }  
-.image img{
+.image img {
 min-width:100%;
 min-height:100%;
-height:auto;
-width: auto;
 position:relative;
 top:50%;
 left:50%;
